# hsr-gacha-web

./: .gitignore  README.md  package_release.py
backend-rust/: Cargo.toml  build.rs
backend-rust/src/: analytics.rs  auto_url.rs  error.rs  hsr_client.rs  hsr_history.rs  launcher_settings.rs  lib.rs  main.rs  paths.rs  resource_sync.rs  user_data.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  localStore.js  mergeGachaResult.js  poolHistory.js  styles.css  uigf.js
resources/dict/: character.json  weapon.json
resources/gacha/: character.json  weapon.json
scripts/: release.mjs
